--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,700,800|Raleway:400,500,600,800|Roboto|Poppins:400,500,600,800" rel="stylesheet">
-    <title>React App</title>
+    <title>Pizza OK</title>
   </head>
   <body>
     <div id="root"></div>
